--- a/site/pages/references.html
+++ b/site/pages/references.html
@@ -22,7 +22,7 @@ print(hl.citation())</code></pre>
       <p>Or you could include the following line in your bibliography:</p>
       <pre><code>Hail Team. Hail 0.2. https://github.com/hail-is/hail</code></pre>
       <p>Otherwise, we welcome you to add additional examples by <a href="https://github.com/hail-is/hail/edit/main/site/pages/references.html">editing this page directly</a>, after which we will review the pull request to confirm the addition is valid. Please adhere to the existing formatting conventions.</p>
-      <p><em>Last updated on October 14th, 2020</em></p>
+      <p><em>Last updated on November 16th, 2020</em></p>
       <h2 id="section">2020</h2>
       <ul>
         <li><p>Kwong, A.K., et al. "Exome Sequencing in Paediatric Patients with Movement Disorders with Treatment Possibilities", <em>Research Square</em> (2020). <a href="https://doi.org/10.21203/rs.3.rs-101211/v1" class="uri">https://doi.org/10.21203/rs.3.rs-101211/v1</a> <a href="https://europepmc.org/article/ppr/ppr235428" class="uri">https://europepmc.org/article/ppr/ppr235428</a></p></li>
@@ -32,6 +32,7 @@ print(hl.citation())</code></pre>
       </ul>
       <h2 id="section-1">2019</h2>
       <ul>
+        <li><p>Farhan, Sali MK, et al. “Exome sequencing in amyotrophic lateral sclerosis implicates a novel gene, DNAJC7, encoding a heat-shock protein” <em>Nature Neuroscience</em> (2019): 307835. <a href="https://www.nature.com/articles/s41593-019-0530-0" class="uri">https://www.nature.com/articles/s41593-019-0530-0</a></p></li>
         <li><p>Gay, Nicole R. et al. “Impact of admixture and ancestry on eQTL analysis and GWAS colocalization in GTEx” <em>bioRxiv</em> (2019) 836825; <a href="https://www.biorxiv.org/content/10.1101/836825v1" class="uri">https://www.biorxiv.org/content/10.1101/836825v1</a></p></li>
         <li><p>Sakaue, Saori et al. “Trans-biobank analysis with 676,000 individuals elucidates the association of polygenic risk scores of complex traits with human lifespan” <em>bioRxiv</em> (2019): 856351 <a href="https://www.biorxiv.org/content/10.1101/856351v1" class="uri">https://www.biorxiv.org/content/10.1101/856351v1</a></p></li>
         <li><p>Polimanti, Renato et al. “Leveraging genome-wide data to investigate differences between opioid use vs. opioid dependence in 41,176 individuals from the Psychiatric Genomics Consortium” <em>bioRxiv</em> (2019): 765065 <a href="https://www.biorxiv.org/content/10.1101/765065v1" class="uri">https://www.biorxiv.org/content/10.1101/765065v1</a></p></li>
@@ -71,7 +72,6 @@ print(hl.citation())</code></pre>
         <li><p>Satterstrom, F. Kyle, et al. “ASD and ADHD have a similar burden of rare protein-truncating variants.” <em>bioRxiv</em> (2018): 277707. <a href="https://www.biorxiv.org/content/10.1101/277707v1" class="uri">https://www.biorxiv.org/content/10.1101/277707v1</a></p></li>
         <li><p>Zekavat, Seyedeh M., et al. “Deep coverage whole genome sequences and plasma lipoprotein (a) in individuals of European and African ancestries.” <em>Nature Communications</em> 9.1 (2018): 2606. <a href="https://www.nature.com/articles/s41467-018-04668-w" class="uri">https://www.nature.com/articles/s41467-018-04668-w</a></p></li>
         <li><p>Natarajan, Pradeep, et al. “Deep-coverage whole genome sequences and blood lipids among 16,324 individuals.” <em>Nature Communications</em> 9.1 (2018): 3391. <a href="https://www.nature.com/articles/s41467-018-04668-w" class="uri">https://www.nature.com/articles/s41467-018-04668-w</a></p></li>
-        <li><p>Farhan, Sali MK, et al. “Enrichment of rare protein truncating variants in amyotrophic lateral sclerosis patients.” <em>bioRxiv</em> (2018): 307835. <a href="https://www.biorxiv.org/content/10.1101/307835v2" class="uri">https://www.biorxiv.org/content/10.1101/307835v2</a></p></li>
         <li><p>Ganna, Andrea, et al. “Quantifying the impact of rare and ultra-rare coding variation across the phenotypic spectrum.” <em>American Journal of Human Genetics</em> 102.6 (2018): 1204-1211. <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5992130/" class="uri">https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5992130/</a></p></li>
         <li><p>Khera, Amit V., et al. “Genome-wide polygenic scores for common diseases identify individuals with risk equivalent to monogenic mutations.” <em>Nature Genetics</em> 50.9 (2018): 1219. <a href="https://www.nature.com/articles/s41588-018-0183-z?_ga=2.263293700.980063710.1543017600-1151073636.1543017600" class="uri">https://www.nature.com/articles/s41588-018-0183-z?_ga=2.263293700.980063710.1543017600-1151073636.1543017600</a></p></li>
         <li><p>Roselli, Carolina, et al. “Multi-ethnic genome-wide association study for atrial fibrillation.” <em>Nature Genetics</em> 50.9 (2018): 1225. <a href="https://www.nature.com/articles/s41588-018-0133-9" class="uri">https://www.nature.com/articles/s41588-018-0133-9</a></p></li>
