--- a/site/pages/references.html
+++ b/site/pages/references.html
@@ -22,7 +22,11 @@ print(hl.citation())</code></pre>
       <p>Or you could include the following line in your bibliography:</p>
       <pre><code>Hail Team. Hail 0.2. https://github.com/hail-is/hail</code></pre>
       <p>Otherwise, we welcome you to add additional examples by <a href="https://github.com/hail-is/hail/edit/main/site/pages/references.html">editing this page directly</a>, after which we will review the pull request to confirm the addition is valid. Please adhere to the existing formatting conventions.</p>
-      <p><em>Last updated on November 23rd, 2020</em></p>
+      <p><em>Last updated on February 15th, 2021</em></p>
+      <h2 id="section">2021</h2>
+      <ul>
+        <li><p>Malanchini, M., et al. "Pathfinder: A gamified measure to integrate general cognitive ability into the biological, medical and behavioural sciences.", <em>bioRxiv</em> (2021). <a href="https://www.biorxiv.org/content/10.1101/2021.02.10.430571v1.abstract" class="uri">https://www.biorxiv.org/content/10.1101/2021.02.10.430571v1.abstract</a> <a href="https://www.biorxiv.org/content/10.1101/2021.02.10.430571v1.abstract" class="uri">https://www.biorxiv.org/content/10.1101/2021.02.10.430571v1.abstract</a></p></li>
+      </ul>
       <h2 id="section">2020</h2>
       <ul>
         <li><p>Zekavat, S.M., et al. "Hematopoietic mosaic chromosomal alterations and risk for infection among 767,891 individuals without blood cancer", <em>medRxiv</em> (2020). <a href="https://doi.org/10.1101/2020.11.12.20230821" class="uri">https://doi.org/10.1101/2020.11.12.20230821</a> <a href="https://europepmc.org/article/ppr/ppr238896" class="uri">https://europepmc.org/article/ppr/ppr238896</a></p></li>
